<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/tituloCadastro"
        android:text="Cadastre-se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/lilas"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@color/cinza"
        android:textColorHint="@color/cinza"
        android:backgroundTint="@color/cinza"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tituloCadastro"
        android:fontFamily="sans-serif-condensed-light"/>

    <TextView
        android:id="@+id/txtErrorNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="false"
        android:layout_below="@id/edtNome"
        android:textColor="@color/vermelho"
        android:fontFamily="sans-serif-condensed-light"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/cinza"
        android:textColorHint="@color/cinza"
        android:backgroundTint="@color/cinza"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txtErrorNome"
        android:fontFamily="sans-serif-condensed-light"/>

    <TextView
        android:id="@+id/txtErrorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="false"
        android:layout_below="@id/edtEmail"
        android:textColor="@color/vermelho"
        android:fontFamily="sans-serif-condensed-light"/>

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/cinza"
        android:textColorHint="@color/cinza"
        android:backgroundTint="@color/cinza"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txtErrorEmail"
        android:fontFamily="sans-serif-condensed-light"/>

    <TextView
        android:id="@+id/txtErrorSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="false"
        android:layout_below="@id/edtSenha"
        android:textColor="@color/vermelho"
        android:fontFamily="sans-serif-condensed-light"/>

    <EditText
        android:id="@+id/edtConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        android:textColor="@color/cinza"
        android:backgroundTint="@color/cinza"
        android:textColorHint="@color/cinza"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txtErrorSenha"
        android:fontFamily="sans-serif-condensed-light"/>

    <TextView
        android:id="@+id/txtErrorConfirmarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="false"
        android:layout_below="@id/edtConfirmarSenha"
        android:textColor="@color/vermelho"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/amarelo_escuro"
        android:minWidth="250dp"
        android:text="Cadastrar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/txtErrorConfirmarSenha"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-medium"/>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/amarelo_claro"
        android:minWidth="250dp"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/btnCadastrar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-medium"/>
</RelativeLayout>